fix alignment

--- a/www/css/default_v3.css
+++ b/www/css/default_v3.css
@@ -594,6 +594,9 @@ body {
 .firefox.windows #tracker_bar .buttons .button.long .label {
     padding-top: 17px;
 }
+.ie.windows #tracker_bar .buttons .button.long .label {
+    padding-top: 17px;
+}
 #tracker_bar .buttons .button.long:hover .label {
     color: white;
 }
@@ -1509,6 +1512,13 @@ body {
     font-weight: normal;
     vertical-align: top;
 }
+.ie.windows .content_tab .close .name {
+    padding-top: 5px;
+}
+.firefox.windows .content_tab .close .name {
+    padding-top: 5px;
+}
+
 .no_touch .content_tab .close:hover .name {
     color: #888;
 }
